--- a/sdqthesis.cls
+++ b/sdqthesis.cls
@@ -183,11 +183,11 @@
 \theinstitute\\[2em]
 \begin{tabular}{l l}
   \ifcurrentbaselanguage{English}{First examiner}{1. Prüfer}: & \thereviewerone\\
-  \ifcurrentbaselanguage{English}{Second examiner}{2. Prüfer/Prüferin}: & \thereviewertwo\\[.5em]
-  \ifcurrentbaselanguage{English}{First advisor}{1. Betreuer/Betreuerin}: &  \theadvisorone\\
+  \ifcurrentbaselanguage{English}{Second examiner}{2. Prüfer}: & \thereviewertwo\\[.5em]
+  \ifcurrentbaselanguage{English}{First advisor}{1. Betreuer}: &  \theadvisorone\\
   % if there is no second advisor, do not output this line
   \ifthenelse{\equal{\theadvisortwo}{}}{}{%
-  \ifcurrentbaselanguage{English}{Second advisor}{2. Betreuer/Betreuerin}: & \theadvisortwo\\
+  \ifcurrentbaselanguage{English}{Second advisor}{2. Betreuer}: & \theadvisortwo\\
   }
 \end{tabular}
 \vskip2em
@@ -279,5 +279,8 @@
 }
 
 %custom commands
+\RequirePackage{pgfgantt}
+\RequirePackage{nameref}
+\RequirePackage{pdflscape}
 \newcommand{\citewithauthor}[1]{\citeauthor{#1} \cite{#1}}
 \newcommand{\directQuote}[3][]{\guillemotleft#2\guillemotright~\cite[#1]{#3}}
