--- a/thesis.bib
+++ b/thesis.bib
@@ -91,6 +91,18 @@
   version = {ecsa22-msr4sa}
 }
 
+@inproceedings{fuchss2023EstablishingBenchmark,
+  title = {Establishing a Benchmark Dataset for Traceability Link Recovery between Software Architecture Documentation and Models},
+  booktitle = {Software Architecture. {{ECSA}} 2022 Tracks and Workshops},
+  author = {Fuchß, Dominik and Corallo, Sophie and Keim, Jan and Speit, Janek and Koziolek, Anne},
+  editor = {Batista, Thais and Bureš, Tomáš and Raibulet, Claudia and Muccini, Henry},
+  date = {2023},
+  pages = {455--464},
+  publisher = {Springer International Publishing},
+  location = {Cham},
+  isbn = {978-3-031-36889-9}
+}
+
 @inproceedings{fuchss2025LiSSAGeneric,
   title = {LiSSA: Toward Generic Traceability Link Recovery through Retrieval-Augmented Generation},
   shorttitle = {LiSSA},
@@ -238,18 +250,19 @@
   keywords = {Computer Science - Computation and Language}
 }
 
-@online{pryzant2023AutomaticPrompt,
-  title = {Automatic {{Prompt Optimization}} with "{{Gradient Descent}}" and {{Beam Search}}},
-  author = {Pryzant, Reid and Iter, Dan and Li, Jerry and Lee, Yin Tat and Zhu, Chenguang and Zeng, Michael},
-  date = {2023-10-19},
-  eprint = {2305.03495},
-  eprinttype = {arXiv},
-  eprintclass = {cs},
-  doi = {10.48550/arXiv.2305.03495},
-  url = {http://arxiv.org/abs/2305.03495},
-  urldate = {2025-05-13},
-  pubstate = {prepublished},
-  keywords = {Computer Science - Artificial Intelligence,Computer Science - Computation and Language,Computer Science - Machine Learning}
+@inproceedings{pryzant2023AutomaticPrompt,
+  title = {Automatic {{Prompt Optimization}} with “{{Gradient Descent}}” and {{Beam Search}}},
+  booktitle = {Proceedings of the 2023 {{Conference}} on {{Empirical Methods}} in {{Natural Language Processing}}},
+  author = {Pryzant, Reid and Iter, Dan and Li, Jerry and Lee, Yin and Zhu, Chenguang and Zeng, Michael},
+  editor = {Bouamor, Houda and Pino, Juan and Bali, Kalika},
+  date = {2023-12},
+  pages = {7957--7968},
+  publisher = {Association for Computational Linguistics},
+  location = {Singapore},
+  doi = {10.18653/v1/2023.emnlp-main.494},
+  url = {https://aclanthology.org/2023.emnlp-main.494/},
+  urldate = {2025-06-02},
+  eventtitle = {{{EMNLP}} 2023}
 }
 
 @inproceedings{rodriguez2023PromptsMatter,
@@ -453,4 +466,18 @@
   urldate = {2025-05-20},
   pubstate = {prepublished},
   keywords = {Computer Science - Artificial Intelligence,Computer Science - Computation and Language}
+}
+
+@misc{long_large_2023,
+    title = {Large {Language} {Model} {Guided} {Tree}-of-{Thought}},
+    url = {http://arxiv.org/abs/2305.08291},
+    doi = {10.48550/arXiv.2305.08291},
+    abstract = {In this paper, we introduce the Tree-of-Thought (ToT) framework, a novel approach aimed at improving the problem-solving capabilities of auto-regressive large language models (LLMs). The ToT technique is inspired by the human mind's approach for solving complex reasoning tasks through trial and error. In this process, the human mind explores the solution space through a tree-like thought process, allowing for backtracking when necessary. To implement ToT as a software system, we augment an LLM with additional modules including a prompter agent, a checker module, a memory module, and a ToT controller. In order to solve a given problem, these modules engage in a multi-round conversation with the LLM. The memory module records the conversation and state history of the problem solving process, which allows the system to backtrack to the previous steps of the thought-process and explore other directions from there. To verify the effectiveness of the proposed technique, we implemented a ToT-based solver for the Sudoku Puzzle. Experimental results show that the ToT framework can significantly increase the success rate of Sudoku puzzle solving. Our implementation of the ToT-based Sudoku solver is available on GitHub: {\textbackslash}url\{https://github.com/jieyilong/tree-of-thought-puzzle-solver\}.},
+    urldate = {2025-06-02},
+    publisher = {arXiv},
+    author = {Long, Jieyi},
+    month = may,
+    year = {2023},
+    note = {arXiv:2305.08291 [cs]},
+    keywords = {Computer Science - Artificial Intelligence, Computer Science - Computation and Language, Computer Science - Computer Vision and Pattern Recognition, Computer Science - Machine Learning, Computer Science - Neural and Evolutionary Computing},
 }
