--- a/thesis.tex
+++ b/thesis.tex
@@ -41,7 +41,7 @@
 
 %% The reviewers are the professors that grade your thesis
 \reviewerone{Prof. Dr.-Ing. Anne Koziolek}
-\reviewertwo{Prof. B}
+\reviewertwo{Prof. Dr. Ralf Reussner}
 
 %% The advisors are PhDs or Postdocs
 \advisorone{M.Sc. Dominik Fuchß}
