--- a/thesis.bib
+++ b/thesis.bib
@@ -91,6 +91,18 @@
   version = {ecsa22-msr4sa}
 }
 
+@inproceedings{fuchss2023EstablishingBenchmark,
+  title = {Establishing a Benchmark Dataset for Traceability Link Recovery between Software Architecture Documentation and Models},
+  booktitle = {Software Architecture. {{ECSA}} 2022 Tracks and Workshops},
+  author = {Fuchß, Dominik and Corallo, Sophie and Keim, Jan and Speit, Janek and Koziolek, Anne},
+  editor = {Batista, Thais and Bureš, Tomáš and Raibulet, Claudia and Muccini, Henry},
+  date = {2023},
+  pages = {455--464},
+  publisher = {Springer International Publishing},
+  location = {Cham},
+  isbn = {978-3-031-36889-9}
+}
+
 @inproceedings{fuchss2025LiSSAGeneric,
   title = {LiSSA: Toward Generic Traceability Link Recovery through Retrieval-Augmented Generation},
   shorttitle = {LiSSA},
@@ -211,6 +223,20 @@
   organization = {GitHub}
 }
 
+@online{long2023LargeLanguage,
+  title = {Large {{Language Model Guided Tree-of-Thought}}},
+  author = {Long, Jieyi},
+  date = {2023-05-15},
+  eprint = {2305.08291},
+  eprinttype = {arXiv},
+  eprintclass = {cs},
+  doi = {10.48550/arXiv.2305.08291},
+  url = {http://arxiv.org/abs/2305.08291},
+  urldate = {2025-06-02},
+  pubstate = {prepublished},
+  keywords = {Computer Science - Artificial Intelligence,Computer Science - Computation and Language,Computer Science - Computer Vision and Pattern Recognition,Computer Science - Machine Learning,Computer Science - Neural and Evolutionary Computing}
+}
+
 @article{madaan2023SelfRefineIterative,
   title = {Self-{{Refine}}: {{Iterative Refinement}} with {{Self-Feedback}}},
   shorttitle = {Self-{{Refine}}},
@@ -238,18 +264,19 @@
   keywords = {Computer Science - Computation and Language}
 }
 
-@online{pryzant2023AutomaticPrompt,
-  title = {Automatic {{Prompt Optimization}} with "{{Gradient Descent}}" and {{Beam Search}}},
-  author = {Pryzant, Reid and Iter, Dan and Li, Jerry and Lee, Yin Tat and Zhu, Chenguang and Zeng, Michael},
-  date = {2023-10-19},
-  eprint = {2305.03495},
-  eprinttype = {arXiv},
-  eprintclass = {cs},
-  doi = {10.48550/arXiv.2305.03495},
-  url = {http://arxiv.org/abs/2305.03495},
-  urldate = {2025-05-13},
-  pubstate = {prepublished},
-  keywords = {Computer Science - Artificial Intelligence,Computer Science - Computation and Language,Computer Science - Machine Learning}
+@inproceedings{pryzant2023AutomaticPrompt,
+  title = {Automatic {{Prompt Optimization}} with “{{Gradient Descent}}” and {{Beam Search}}},
+  booktitle = {Proceedings of the 2023 {{Conference}} on {{Empirical Methods}} in {{Natural Language Processing}}},
+  author = {Pryzant, Reid and Iter, Dan and Li, Jerry and Lee, Yin and Zhu, Chenguang and Zeng, Michael},
+  editor = {Bouamor, Houda and Pino, Juan and Bali, Kalika},
+  date = {2023-12},
+  pages = {7957--7968},
+  publisher = {Association for Computational Linguistics},
+  location = {Singapore},
+  doi = {10.18653/v1/2023.emnlp-main.494},
+  url = {https://aclanthology.org/2023.emnlp-main.494/},
+  urldate = {2025-06-02},
+  eventtitle = {{{EMNLP}} 2023}
 }
 
 @inproceedings{rodriguez2023PromptsMatter,
