--- a/sections/work_plan.tex
+++ b/sections/work_plan.tex
@@ -24,34 +24,53 @@ The benchmark data to compare tree-of-thought prompting with the existing zero s
 \label{phase_naive_iterative}
 \textbf{What:} I plan to implement a naive iterative approach to prompt optimization. Many automatic prompt optimization algorithms \cite{pryzant2023AutomaticPrompt} \textit{to-do: quote more papers using iterative algorithms} depend on an iterative core loop which will be repeated until the optimized prompt performs good enough.
 
-\textbf{How:} Another quick classifier implementation will be the simplest automatic iterative prompt optimization algorithm. The same existing abstract \verb|classifier| class can be used as in \ref{phase_initial_overview} to provide basic functionality for the classifier.
+\textbf{How:} Another quick classifier implementation will be the simplest automatic iterative prompt optimization algorithm. The same existing abstract \verb|classifier| class can be used as in \ref{phase_initial_overview} to provide basic functionality for the iteratively optimized classifier.
 
-Next, a function $f$ will be required to quantify the result of the current prompt $p$ iteration. The simple approach here is to use the successful retrieval rate, by dividing the amount of correctly classified trace links by the total amount of recoverable trace links.
-\[f: p \rightarrow [0, 1]\]
+Next, a function $f$ will be required to quantify the result of the current prompt $p$ iteration, called to a large language model $llm$. The simple approach here is to use the successful retrieval rate, by dividing the amount of correctly classified trace links by the total amount of recoverable trace links.
+The function $f$ will need to have the same range for any set of training data to ensure the threshold value $t$ will always be viable.
 
-The benchmark data by \citewithauthor{fuchss2022ArDoCoBenchmark} also provides the gold standard for each given problem. The total amount of recoverable trace links thus is already available. \textit{to-do: how can the task set be divided into training and testing data? Use one entire tlr problem for training, the remaining for testing?}
+
+\begin{align*} 
+f: llm(p) \rightarrow [0, 1] \\
+t \in [0, 1]
+\end{align*}
+The benchmark data by \citewithauthor{fuchss2022ArDoCoBenchmark} also provides the gold standard for each given problem. The total amount of recoverable trace links thus is already available. \textit{to-do: how can the task set be divided into training and testing data? Use one entire TLR problem for training, the remaining for testing?}
 
 To improve the performance, an optimization prompt is used. The naive approach is to simply ask the LLM to improve the prompt without providing further direction or information about why the prompt did not meet the requirements yet. The hopefully improved prompt will be taken into the next iteration. The act of evaluation and improving will be repeated until a threshold value is passed, meaning the prompt is considered good enough. To limit resource usage, a hard limit will also be included to put an upper bound on the optimization attempts.
 
 
-\textbf{Why:} Implementing this naive iteratively optimized classifier will yield fast results to evaluate later, even if more complicated implementations might fail.  
+\textbf{Why:} Implementing this naive iteratively optimized classifier will yield fast results to evaluate later, even if more complicated implementations might fail. The core concepts also apply for \ref{phase_gradient_descent} and can be reused. 
 
 
 \subsection{Automatic Prompt Optimization Based on Gradient Descent}
 \label{phase_gradient_descent}
-\textbf{What:} The major implementation will be an adaption of the gradient descent based automatic prompt optimization algorithm by \citewithauthor{pryzant2023AutomaticPrompt}. 
+\textbf{What:} The major implementation of this thesis will be an adaption of the gradient descent based automatic prompt optimization (APO) algorithm by \citewithauthor{pryzant2023AutomaticPrompt}. 
+The APO algorithm will be trained and tested on the LiSSA benchmark data \cite{fuchss2022ArDoCoBenchmark}. The optimized prompt will be compared against previous prompts used by \citeauthor{fuchss2025LiSSAGeneric} in the LiSSA project.
 
-\textbf{How:} The authors have provided their python source code in a publicly accessible repository\footnote{https://github.com/microsoft/LMOps/tree/main/prompt\_optimization} under the MIT licensing. 
+\textbf{How:} The authors have provided their python source code in a publicly accessible repository\footnote{https://github.com/microsoft/LMOps/tree/main/prompt\_optimization} under the MIT licensing. The project code can be of great help when adapting their algorithm to the LiSSA java framework.
+
+The existing iterative optimization implementation from \ref{phase_naive_iterative} can be used as foundations for the implementation as the core concepts remain the same. Refer to \ref{sec:gradient_descent} for details of the gradient descent based optimization algorithm. The actual implementation of gradient descent will be the main focus here, in order to steer optimized prompts in the right direction.
 
 
-\textbf{Why:} 
+\textbf{Why:} The primary idea of this thesis is to explore automated optimization. The naive approach may yield good results already. Feeding more information and processing logic into the optimization system is expected to present better results. Especially suitable results may be reached faster by doing more processing on the machine instead of expensive API calls to the large language model.
 
 
 \subsection{Evaluation and Buffer}
 \label{phase_evaluation}
-\textbf{What:} As this work can be seen as an expansion on the recent work of \citewithauthor{fuchss2025LiSSAGeneric} the same metrics will be used. These are the precision, recall, $F_1$-Score and $F_2$-Score. This enables an easy comparison, especially with the manual prompts designed by \citewithauthor{ewald2024RetrievalAugmentedLarge} included in the work of \citeauthor{fuchss2025LiSSAGeneric}.
+\textbf{What:} As this work can be seen as an expansion on the recent work of \citewithauthor{fuchss2025LiSSAGeneric} the same metrics will be used to evaluate the different prompts used and optimized in this work. These are the precision, recall, $F_1$-Score and $F_2$-Score. This enables an easy comparison, especially with the manual prompts designed by \citewithauthor{ewald2024RetrievalAugmentedLarge} included in the work of \citeauthor{fuchss2025LiSSAGeneric}.
 
-\textbf{How:} Precision and recall are key measures for information retrieval tasks \cite{hayes2006AdvancingCandidate}. \textit{TODO: Explain these metricize and how they are calculated} 
+\textbf{How:} Precision and recall are key measures for information retrieval tasks \cite{hayes2006AdvancingCandidate}. 
+
+\textit{TODO: Explain these metricize and how they are calculated instead of direct quoting and format formulas} 
+\directQuote[sec. 7.1]{Precision measures the ratio of correctly predicted links and all predicted links. Recall measures the ratio of correctly predicted links and all relevant documents. It shows an approach’s ability to provide correct trace links. The F1 score is the harmonic mean of precision and recall. The Metrics are calculated in the following way, where TP is true positives, FP is false positives, and FN is false negatives.}{ewald2024RetrievalAugmentedLarge}
+
+\begin{align*} 
+    Precision = \frac{TP}{TP + FP} &\\
+    Recall = \frac{TP}{TP + FN} &\\
+    f_1 = 2 \cdot \frac{Precision \cdot Recall}{Precision + Recall} = \frac{TP}{TP + \frac{1}{2}(FP + FN)} &
+\end{align*}
+
+
 
 Depending on how long each phase will take, it is possible to generate a bunch of different data and perform comparisons.
 A simple but interesting approach is to compare different LLMs for the task. Many variations can be achieved by comparing for example how a prompt optimized by one system performs on the others. We can also compare how well each system manages to optimize the initial prompt. 
@@ -67,12 +86,12 @@ Another interesting thought is to take optimized prompts from a different system
 
 
 \section{Artifacts}
-This work will yield code to be merged into the LiSSA repository\footnote{https://github.com/ArDoCo/LiSSA-RATLR/}. The implementation of \ref{phase_initial_overview} and \ref{phase_gradient_descent} will provide a base to add further automatic prompt optimization techniques with similar building blocks.
+This work will yield code to be merged into the LiSSA repository\footnote{https://github.com/ArDoCo/LiSSA-RATLR/}. The implementation of \ref{phase_naive_iterative} and \ref{phase_gradient_descent} will provide a base to add further automatic prompt optimization techniques with similar building blocks.
 
 A written report will be created to document, summarize and evaluate the results of my (automatic) prompt optimization work to retrieve trace links.
 
 
-    \section{Schedule}
+\section{Schedule}
     \begin{ganttchart}[today=7,today label=Current Week]{1}{25}
       \gantttitle{2025}{25} \\
       %todo: unfortunately not all months have four calendar weeks :)
@@ -107,4 +126,10 @@ A written report will be created to document, summarize and evaluate the results
       \ganttlink{elem9}{elem14}
       \ganttlink{elem11}{elem15}
       \ganttlink{elem7}{elem14}
+      \ganttlink{elem3}{elem4}
     \end{ganttchart}
+
+%\section{Risk Management}
+%\begin{risks}
+%    \item Test
+%\end{risks}
