Update on Overleaf.

--- a/sdqthesis.cls
+++ b/sdqthesis.cls
@@ -282,5 +282,9 @@
 \RequirePackage{pgfgantt}
 \RequirePackage{nameref}
 \RequirePackage{pdflscape}
+\RequirePackage{algorithm}
+\RequirePackage{algpseudocode}
 \newcommand{\citewithauthor}[1]{\citeauthor{#1} \cite{#1}}
 \newcommand{\directQuote}[3][]{\guillemotleft#2\guillemotright~\cite[#1]{#3}}
+
+\newcommand{\citeiterative}[0]{\cite{pryzant2023AutomaticPrompt, zadenoori2025AutomaticPrompt}}
