--- a/sections/related_work.tex
+++ b/sections/related_work.tex
@@ -1,3 +1,5 @@
 \chapter{Related Work}
 In previous work by \citewithauthor{fuchss2025LiSSAGeneric}
 simple handwritten prompts were used to recover trace links between software documentation and architectural diagrams. They have made their work available to the public by hosting a repository, accessible under the MIT license.
+
+\textit{Two Pages}
