--- a/thesis.tex
+++ b/thesis.tex
@@ -126,6 +126,7 @@
 \input{sections/introduction}
 \input{sections/foundations}
 \input{sections/related_work}
+\input{sections/approach}
 \input{sections/work_plan}
 
 
