--- a/thesis.bib
+++ b/thesis.bib
@@ -46,6 +46,12 @@
   langid = {english}
 }
 
+@online{BeamSearch,
+  title = {Beam Search from {{FOLDOC}}},
+  url = {https://foldoc.org/beam+search},
+  urldate = {2025-06-12}
+}
+
 @online{chen2023TeachingLarge,
   title = {Teaching {{Large Language Models}} to {{Self-Debug}}},
   author = {Chen, Xinyun and Lin, Maxwell and Schärli, Nathanael and Zhou, Denny},
@@ -186,6 +192,36 @@
   keywords = {Computer Science - Artificial Intelligence,Computer Science - Computation and Language,Computer Science - Machine Learning}
 }
 
+@online{kuleshov2014AlgorithmsMultiarmed,
+  title = {Algorithms for Multi-Armed Bandit Problems},
+  author = {Kuleshov, Volodymyr and Precup, Doina},
+  date = {2014-02-25},
+  eprint = {1402.6028},
+  eprinttype = {arXiv},
+  eprintclass = {cs},
+  doi = {10.48550/arXiv.1402.6028},
+  url = {http://arxiv.org/abs/1402.6028},
+  urldate = {2025-06-12},
+  langid = {english},
+  pubstate = {prepublished},
+  keywords = {Computer Science - Artificial Intelligence,Computer Science - Machine Learning}
+}
+
+@online{kuleshov2014AlgorithmsMultiarmeda,
+  title = {Algorithms for Multi-Armed Bandit Problems},
+  author = {Kuleshov, Volodymyr and Precup, Doina},
+  date = {2014-02-25},
+  eprint = {1402.6028},
+  eprinttype = {arXiv},
+  eprintclass = {cs},
+  doi = {10.48550/arXiv.1402.6028},
+  url = {http://arxiv.org/abs/1402.6028},
+  urldate = {2025-06-12},
+  langid = {english},
+  pubstate = {prepublished},
+  keywords = {Computer Science - Artificial Intelligence,Computer Science - Machine Learning}
+}
+
 @online{lester2021PowerScale,
   title = {The {{Power}} of {{Scale}} for {{Parameter-Efficient Prompt Tuning}}},
   author = {Lester, Brian and Al-Rfou, Rami and Constant, Noah},
@@ -224,6 +260,20 @@
 }
 
 @online{long2023LargeLanguage,
+  title = {Large {{Language Model Guided Tree-of-Thought}}},
+  author = {Long, Jieyi},
+  date = {2023-05-15},
+  eprint = {2305.08291},
+  eprinttype = {arXiv},
+  eprintclass = {cs},
+  doi = {10.48550/arXiv.2305.08291},
+  url = {http://arxiv.org/abs/2305.08291},
+  urldate = {2025-06-02},
+  pubstate = {prepublished},
+  keywords = {Computer Science - Artificial Intelligence,Computer Science - Computation and Language,Computer Science - Computer Vision and Pattern Recognition,Computer Science - Machine Learning,Computer Science - Neural and Evolutionary Computing}
+}
+
+@online{long2023LargeLanguagea,
   title = {Large {{Language Model Guided Tree-of-Thought}}},
   author = {Long, Jieyi},
   date = {2023-05-15},
